<resources>
    <string name="app_name">Buddie Lam</string>
    <string name="todo">TODO</string>
    <string name="hello_friend">HELLO FRIEND</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_as_different_user">Sign in as different user</string>
    <string name="full_name">Full Name</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="request_another_appointment">Request Another Appointment</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="medication">Medication</string>
    <string name="register">Register</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="logo">LOGO</string>


</resources>