<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/baddie">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="45dp"
            android:paddingBottom="10dp"

            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bud_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/hello_friend"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/custom_gray"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/email"
            android:layout_width="305dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/profile_pic"
            android:drawableTint="@color/black"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email"
            android:padding="9dp"
            android:textColorHint="@color/custom_gray"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/password"
            android:layout_width="305dp"
            android:layout_height="41dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/lock_icon"
            android:drawableTint="@color/black"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password"
            android:padding="9dp"
            android:textColorHint="@color/custom_gray"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/different_user"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_as_different_user"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/custom_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/different_user" />

        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/teal_700"
            android:text="Login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remember_me"
             />

        <TextView

            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:onClick="toResetPassword"
            android:layout_marginStart="31dp"
            android:textColor="@color/teal_700"
            android:paddingTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="30dp"
            android:onClick="goToRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="OnClick" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>