<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/baddie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/bud_logo"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/rounded_edittext"
                    />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/bud_logo"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/rounded_edittext"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableTint="@color/black"
                android:drawableStart="@drawable/profile_pic"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/email_icon"
                android:drawableTint="@color/black"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_name" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableTint="@color/black"
                android:drawableStart="@drawable/person_icon"
                android:hint="Gender"
                android:inputType="text"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/birthday_cake_icon"
                android:drawableTint="@color/black"
                android:hint="Age"
                android:inputType="number"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableTint="@color/black"
                android:drawableStart="@drawable/date_icon"
                android:hint="Date Of Birth (DD/MM/YYYY)"
                android:inputType="date"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/phone_icon"
                android:drawableTint="@color/black"
                android:hint="Phone Number"
                android:inputType="phone"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_of_birth" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableTint="@color/black"
                android:drawableStart="@drawable/location_icon"
                android:hint="Location"
                android:inputType="textPostalAddress"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/lock_icon"
                android:drawableTint="@color/black"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edittext"
                android:drawableTint="@color/black"
                android:drawableStart="@drawable/lock_icon"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/custom_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:paddingBottom="20dp"
                android:paddingTop="5dp"
                >
                <Button
                    android:id="@+id/register"
                    android:layout_width="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:backgroundTint="@color/red"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <Button
                    android:id="@+id/back_to_home"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:text="@string/back"
                    android:onClick="back_to_home"
                    android:backgroundTint="@color/teal_700"
                    android:background="@drawable/rounded_edittext"
                    tools:ignore="OnClick"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"


                    />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>